k8s/currency-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: currency-converter
  replicas: 1
  template:
    metadata:
      name: currency-converter
      labels:
        app: currency-converter
    spec:
      containers:
        - name: currency-converter
          image: devdwr/currency-converter-app:1.0
