k8s/currency-postgres.yaml
apiVersion: apps/v1
kind:  Deployment
metadata:
  name: currency-postgres
spec:
  selector:
    matchLabels:
      app: currency-postgres
  template:
    metadata:
      labels:
        app: currency-postgres
    spec:
      volumes:
        - name: currency-postgres-storage
          persistentVolumeClaim:
            claimName: currency-postgres-pvc
      containers:
        - image: library/postgres:9.6
          name: currency-postgres
          ports:
            - containerPort: 5432
              name: currency-postgres
          volumeMounts:
            - name: currency-postgres-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: currency-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: currency-postgres
