k8s/currency-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-app
  namespace: default
  labels:
    app: currency-converter-app
spec:
  selector:
    app: currency-converter-app
    type: ClusterIP
  ports:
    - name: http
      port: 8080
